@@ -5,6 +5,7 @@
 	Fixes for running with Postfix (Nerijus Baliunas)
 	Fix configure problem with DNSRBL on Linux (Andrew McGill)
 	Document how to use milter-greylist with Postfix (Nerijus Baliunas)
+	Update .spec for Postfix (Nerijus Baliunas)
 3.1.3
 	Fix various bugs (regex searches, lists matches, uninitialized memory)
 3.1.2
